# neat

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  errors.txt
.github/workflows/: ci-cd.yml
examples/: basic.rs  crossover.rs  custom_activation.rs  extra_dna.rs  extra_genes.rs  plot.rs  readme_ex.rs  serde.rs
src/: activation.rs  lib.rs  major_tests.rs  neuralnet.rs  runnable.rs  tests.rs  topology.rs
src/activation/: builtin.rs  fns.rs
src/topology/: activation.rs  mod.rs  neuralnet.rs  nnt_serde.rs
