[package]
name = "neat"
description = "Crate for working with NEAT in rust"
version = "0.5.1"
edition = "2021"
authors = ["HyperCodec"]
repository = "https://github.com/HyperCodec/neat"
homepage = "https://github.com/HyperCodec/neat"
readme = "README.md"
keywords = ["genetic", "machine-learning", "ai", "algorithm", "evolution"]
categories = ["algorithms", "science", "simulation"]
license = "MIT"

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde", "dep:serde-big-array"]


[dependencies]
atomic_float = "1.1.0"
bitflags = "2.10.0"
genetic-rs = { version = "1.1.0", features = ["rayon", "derive"] }
lazy_static = "1.5.0"
rayon = "1.11.0"
replace_with = "0.1.8"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }

[dev-dependencies]
serde_json = "1.0.149"
